Fix overflow of big images in node preview

--- a/pillar-web/src/styles/_project.sass
+++ b/pillar-web/src/styles/_project.sass
@@ -488,6 +488,7 @@ $node-preview-max-height-md: 450px
 $node-preview-max-height-lg: 500px
 
 section.node-preview
+	overflow: hidden
 	&.image,
 	&.file,
 		min-height: 200px
